Se pone espacio para modificar

--- a/home.html
+++ b/home.html
@@ -24,5 +24,15 @@
             </nav>                         
         </header> 
     </nav>
+
+    <div id="all">
+        <div id="section">
+
+        </div>
+
+        <div id="aside">
+
+        </div>
+    </div>
 </body>
 </html>
