--- a/HTML/base.html
+++ b/HTML/base.html
@@ -10,10 +10,11 @@
 <body>
    <nav>
        <ul class="menu">
-           <li><a href="#!">Home</a></li>
-           <li><a href="#!">About</a></li>
-           <li><a href="#!">Contac</a></li>
-           <li><a href="#!">Faq</a></li>
+           <li><a href="../home.html">INICIO</a></li>
+           <li><a href="#!">NOSOTROS</a></li>
+           <li><a href="#!">CONTACTO</a></li>
+           <li><a href="#!">FAQ</a></li>
+           <li><a href="../PHP/login.php"ENTRAR</a></li>
        </ul>
    </nav> 
 </body>
