--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-    <link rel="stylesheet" href="style_h.css">
+    <title>INICIO</title>
+    <link rel="stylesheet" href="CSS/style_home.css">
 </head>
 <body>
     <nav class="top">
@@ -15,11 +15,11 @@
         <header>
             <nav>
                 <ul class="menu">
-                    <li><a href="#!">INICIO</a></li>
+                    <li><a href="home.html">INICIO</a></li>
                     <li><a href="#!">NOSOTROS</a></li>
                     <li><a href="#!">CONTACTO</a></li>
                     <li><a href="#!">FAQ</a></li>
-                    <li><a href="index.php">ENTRAR</a></li>
+                    <li><a href="PHP/login.php">ENTRAR</a></li>
                 </ul>
             </nav>                         
         </header> 
